--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,87 @@
 /* Global Colors  */
 
-:root{
-    --dark:#3A3A3A;
-    --primary:#E02C6D;
-    --text: #787885;
-    --dark-bg: #0A0826;
+:root {
+  --dark: #3a3a3a;
+  --primary: #e02c6d;
+  --text: #787885;
+  --dark-bg: #0a0826;
 }
 
-body{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+/* Container styles  */
+.container-lg {
+  max-width: 1200px;
+  margin: 0 auto;
+}
+
+/* Typography */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul {
+  margin: 0;
+}
+
+/* nav Menu  */
+
+.header-area {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 85px;
+  min-height: 50px;
+}
+
+/* logo  */
+
+.logo-nav .text-logo {
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 36px;
+}
+
+/* MENU  AND CART*/
+.menu-cart {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+  }
+.menu-cart .menu-area ul li {
+  display: inline;
+}
+.priamry-menu .menu-item a {
+  color: var(--dark);
+  text-decoration: none;
+  padding: 5px 17px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 24px;
+  border-radius: 40px;
+  transition: 0.5s ease;
+}
+.priamry-menu .menu-item a:hover {
+  background-color: var(--primary);
+  color: white;
+}
+
+/* cart and search  */
+
+.menu-cart .cart .iconify{
+  font-size: 36px;
+  color: var(--dark);
+}
+.menu-cart .search .iconify {
+  font-size: 24px;
+  color: var(--dark);
+  padding-right: 34px;
 }
