added extra section

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -138,4 +138,17 @@ section {
   .product-grid {
     grid-template-columns: 1fr;
   }
+
+  /* cta  */
+  #call-to-action .cta-container {
+    flex-direction: column;
+  }
+  .cta-container .image-box,
+  .cta-container .content {
+    width: 100%;
+    text-align: center;
+  }
+  #call-to-action .content{
+    padding: 50px 10px;
+  }
 }
