--- a/css/style.css
+++ b/css/style.css
@@ -280,10 +280,11 @@ ul {
   border-radius: 15px;
 }
 .form-input{
-    padding: 7px 15px;
+    padding: 7px 5px;
     border-radius: 50px;
     border: 1px solid rgb(211, 211, 211) ;
     font-size: 16px;
+    text-align: center;
 }
 /* ------FOOTER-----------  */
 
